--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Check cache for newt
       id:   cache-newt
-      uses: actions/cache@v2
+      uses: actions/cache@v
       env:
         cache-name: cache-newt
       with:
@@ -54,7 +54,7 @@ jobs:
 
     - name: Check cache for Mynewt source files
       id:   cache-mynewt
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       env:
         cache-name: cache-mynewt
       with:
@@ -83,7 +83,7 @@ jobs:
 
     # - name: Fetch cache for Rust Toolchain
     #   id:   cache-rust
-    #   uses: actions/cache@v2
+    #   uses: actions/cache@v3
     #   with:
     #     path: |
     #       ~/.cargo/registry
@@ -98,7 +98,7 @@ jobs:
     
     - name: Check cache for Embedded Arm Toolchain arm-none-eabi-gcc
       id:   cache-toolchain
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       env:
         cache-name: cache-toolchain-9-2020-q2
       with:
@@ -117,7 +117,7 @@ jobs:
 
     - name: Check cache for MCUBoot
       id:   cache-mcuboot
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       env:
         cache-name: cache-mcuboot
       with:
@@ -149,13 +149,13 @@ jobs:
         ./scripts/nrf52/build-boot.sh
 
     - name: Upload Bootloader
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: mynewt.elf
         path: bin/targets/nrf52_boot/app/@mcuboot/boot/mynewt/mynewt.elf
 
     - name: Upload Bootloader Outputs
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: mynewt.zip
         path: bin/targets/nrf52_boot/app/@mcuboot/boot/mynewt/mynewt.*
@@ -169,7 +169,7 @@ jobs:
         ./scripts/build-app.sh
 
     - name: Upload Application Firmware
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: my_sensor_app.elf
         path: bin/targets/nrf52_my_sensor/app/apps/my_sensor_app/my_sensor_app.elf
@@ -180,13 +180,13 @@ jobs:
         ./scripts/nrf52/image-app.sh
 
     - name: Upload Application Firmware Image
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: my_sensor_app.img
         path: bin/targets/nrf52_my_sensor/app/apps/my_sensor_app/my_sensor_app.img
 
     - name: Upload Application Firmware Outputs
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: my_sensor_app.zip
         path: bin/targets/nrf52_my_sensor/app/apps/my_sensor_app/my_sensor_app.*
