--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Check cache for newt
       id:   cache-newt
-      uses: actions/cache@v
+      uses: actions/cache@v3
       env:
         cache-name: cache-newt
       with:
